// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`preload modes > should handle "false" preload mode correctly 1`] = `
"
      <html data-beasties-container>
        <head>
          <style>h1{color:blue}</style><link rel="stylesheet" href="/style.css">
        </head>
        <body>
          <h1>Hello World!</h1>
        </body>
      </html>
    "
`;

exports[`preload modes > should inline CSS from stylesheet link that already has media="print" and onload attributes 1`] = `
"
      <!DOCTYPE html>
      <html data-beasties-container>
        <head>
          <meta charset="utf-8" data-next-head>
          <meta name="viewport" content="width=device-width" data-next-head>
          <script src="/_next/static/chunks/c9872c0d3f7adbd6.js" defer></script><script src="/_next/static/chunks/e49b8d8eed7bdf02.js" defer></script><script src="/_next/static/chunks/turbopack-b6eba5dc4c176f46.js" defer></script><script src="/_next/static/chunks/2576e3f2bbbd2e2b.js" defer></script><script src="/_next/static/chunks/turbopack-3e091ce771ea6376.js" defer></script><script src="/_next/static/_rktnP6PYGKbH9vXrO3Ac/_buildManifest.js" defer></script><script src="/_next/static/_rktnP6PYGKbH9vXrO3Ac/_ssgManifest.js" defer></script><script src="/_next/static/_rktnP6PYGKbH9vXrO3Ac/_clientMiddlewareManifest.js" defer></script>
          <style>.index-module__KWKY6G__home{color:#000;background:orange}</style><link rel="stylesheet" href="/_next/static/chunks/0b481e7bfe75fdf6.css" data-n-p media="print" onload="this.media='print'"><noscript><link rel="stylesheet" href="/_next/static/chunks/0b481e7bfe75fdf6.css" data-n-p media="print" onload="this.media='all'"></noscript>
          <noscript>
            <link rel="stylesheet" href="/_next/static/chunks/0b481e7bfe75fdf6.css">
          </noscript>
          <noscript data-n-css></noscript>
        </head>
        <body>
          <div id="__next">
            <p class="index-module__KWKY6G__home">hello world</p>
          </div>
          <script id="__NEXT_DATA__" type="application/json">{"props":{"pageProps":{}},"page":"/","query":{},"buildId":"_rktnP6PYGKbH9vXrO3Ac","nextExport":true,"autoExport":true,"isFallback":false,"scriptLoader":[]}</script>
        </body>
      </html>
    "
`;

exports[`preload modes > should use "js" preload mode correctly 1`] = `
"
      <html data-beasties-container>
        <head>
          <style>h1{color:blue}</style><link rel="preload" href="/style.css" as="style"><noscript><link rel="stylesheet" href="/style.css"></noscript><script data-href="/style.css" data-media="all">function $loadcss(u,m,l){(l=document.createElement('link')).rel='stylesheet';l.href=u;document.head.appendChild(l)}$loadcss(document.currentScript.dataset.href,document.currentScript.dataset.media)</script>
        </head>
        <body>
          <h1>Hello World!</h1>
        </body>
      </html>
    "
`;

exports[`preload modes > should use "media" preload mode correctly 1`] = `
"
      <html data-beasties-container>
        <head>
          <style>h1{color:blue}</style><link rel="stylesheet" href="/style.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="/style.css"></noscript>
        </head>
        <body>
          <h1>Hello World!</h1>
        </body>
      </html>
    "
`;

exports[`preload modes > should use "swap" preload mode correctly 1`] = `
"
      <html data-beasties-container>
        <head>
          <style>h1{color:blue}</style><link rel="preload" href="/style.css" onload="this.rel='stylesheet'" as="style"><noscript><link rel="stylesheet" href="/style.css"></noscript>
        </head>
        <body>
          <h1>Hello World!</h1>
        </body>
      </html>
    "
`;

exports[`preload modes > should use "swap-high" preload mode correctly 1`] = `
"
      <html data-beasties-container>
        <head>
          <style>h1{color:blue}</style><link rel="alternate stylesheet preload" href="/style.css" title="styles" as="style" onload="this.title='';this.rel='stylesheet'"><noscript><link rel="stylesheet" href="/style.css"></noscript>
        </head>
        <body>
          <h1>Hello World!</h1>
        </body>
      </html>
    "
`;

exports[`preload modes > should use "swap-low" preload mode correctly 1`] = `
"
      <html data-beasties-container>
        <head>
          <style>h1{color:blue}</style><link rel="alternate stylesheet" href="/style.css" title="styles" onload="this.title='';this.rel='stylesheet'"><noscript><link rel="stylesheet" href="/style.css"></noscript>
        </head>
        <body>
          <h1>Hello World!</h1>
        </body>
      </html>
    "
`;
